--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-simple-parallax": "^0.2.6",
     "react-spring": "^8.0.27",
     "react-typical": "^0.1.3",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "react-autosuggest": "^9.4.3",
+    "react-compound-slider": "^2.4.0",
+    "react-reveal": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
