--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "mdbreact": "^4.23.1",
     "antd": "^3.26.2",
+    "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "framer-motion": "^1.7.0",
+    "mdbreact": "^4.23.1",
     "react": "^16.12.0",
     "react-awesome-button": "^6.3.1",
     "react-bootstrap": "^1.0.0-beta.16",
