--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.2",
+    "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "formik": "^2.0.8",
     "framer-motion": "^1.7.0",
+    "jwt-decode": "^2.2.0",
     "mdbreact": "^4.23.1",
     "react": "^16.12.0",
+    "react-autosuggest": "^9.4.3",
     "react-awesome-button": "^6.3.1",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-compound-slider": "^2.4.0",
     "react-dom": "^16.12.0",
     "react-mdl": "^1.11.0",
     "react-offcanvas": "^0.4.0",
     "react-parallax": "^3.0.0",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-scroll-to": "^3.0.0-beta.3",
@@ -29,9 +35,7 @@
     "react-spring": "^8.0.27",
     "react-typical": "^0.1.3",
     "semantic-ui-react": "^0.88.2",
-    "react-autosuggest": "^9.4.3",
-    "react-compound-slider": "^2.4.0",
-    "react-reveal": "^1.2.2"
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
