--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^3.26.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.6.0",
     "formik": "^2.0.8",
     "framer-motion": "^1.7.0",
     "jwt-decode": "^2.2.0",
@@ -37,7 +38,6 @@
     "react-typical": "^0.1.3",
     "semantic-ui-react": "^0.88.2",
     "yup": "^0.27.0"
-
   },
   "scripts": {
     "start": "react-scripts start",
