--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^2.2.0",
     "mdbreact": "^4.23.1",
     "react": "^16.12.0",
+    "react-animated-slider": "^2.0.0",
     "react-autosuggest": "^9.4.3",
     "react-awesome-button": "^6.3.1",
     "react-bootstrap": "^1.0.0-beta.16",
