--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^1.7.0",
     "jwt-decode": "^2.2.0",
     "mdbreact": "^4.23.1",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-animated-slider": "^2.0.0",
     "react-autosuggest": "^9.4.3",
@@ -38,6 +39,7 @@
     "react-spring": "^8.0.27",
     "react-typical": "^0.1.3",
     "semantic-ui-react": "^0.88.2",
+    "sweetalert2": "^9.5.3",
     "yup": "^0.27.0"
   },
   "scripts": {
