--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-compound-slider": "^2.4.0",
     "react-dom": "^16.12.0",
+    "react-fade-in": "^0.1.7",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-mdl": "^1.11.0",
     "react-offcanvas": "^0.4.0",
     "react-parallax": "^3.0.0",
