--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "project4",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,8 +14,10 @@
     "firebase": "^7.6.0",
     "formik": "^2.0.8",
     "framer-motion": "^1.7.0",
+    "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "mdbreact": "^4.23.1",
+    "node-pre-gyp": "^0.14.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-animated-slider": "^2.0.0",
