--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.6.0",
     "formik": "^2.0.8",
     "framer-motion": "^1.7.0",
+    "gh-pages": "^2.1.1",
     "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
     "mdbreact": "^4.23.1",
