--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -82,5 +85,5 @@
   "bugs": {
     "url": "https://github.com/Wa7gh/frontend/issues"
   },
-  "homepage": "https://github.com/Wa7gh/frontend#readme"
+  "homepage": "https://github.com/doaaxv/frontend"
 }
