--- a/package.json
+++ b/package.json
@@ -72,7 +72,13 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/doaaxv/frontend.git"
+  }
   },
   "homepage": "https://github.com/doaaxv/frontend"
 }
