--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-scrollchor": "^6.0.0",
     "react-simple-parallax": "^0.2.6",
     "react-spring": "^8.0.27",
+    "react-transition-group": "^4.3.0",
     "react-typical": "^0.1.3",
     "semantic-ui-react": "^0.88.2",
     "sweetalert2": "^9.5.3",
@@ -53,9 +54,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "gh-pages": "^1.1.0"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -70,12 +68,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ],
-    "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-    "main": "index.js",
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/doaaxv/frontend.git"
-    }
+    ]
   }
 }
