--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "formik": "^2.0.8",
     "framer-motion": "^1.7.0",
     "gh-pages": "^2.1.1",
+    "increase": "^1.0.0",
     "install": "^0.13.0",
     "jwt-decode": "^2.2.0",
+    "limit": "0.0.1",
     "mdbreact": "^4.23.1",
+    "memory": "0.0.3",
     "node-pre-gyp": "^0.14.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
