--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "fix-memory-limit": "cross-env LIMIT=4096 increase-memory-limit",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
